--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,8 +1,8 @@
-<div class="home">
+﻿<div class="home">
 <div class="text-center">
 
 	<div class="vertical-space"></div>
-	<h1><a class="github-button" href="https://github.com/samuelbetio" data-size="large" data-show-count="true" aria-label="Follow @samuelbetio on GitHub">Follow @DownGit</a></h1>
+	<h1><a href="https://samuelbetio.github.io/DownGit">DownGit</a></h1>
 	<div class="center-row"></div>
 	<h4>Create GitHub Directory Download Link</h4>
 	
@@ -34,7 +34,7 @@
 	
 	<div class="vertical-space"></div>
 	<div class="footer">
-		<a target="_blank" href="https://samuelbetio.github.io/dGitFile/#/home">&copy; 2014<script>new Date().getFullYear()>2014&&document.write("-"+new Date().getFullYear());</script>Samuel Rapana Betio</a>. All Rights Reserved. <a target="_blank" href="https://samuelbetio.github.io/salique/privacy.html">Privacy Policy</a>
+		<a target="_blank" href="https://github.com/samuelbetio">Samuel Rapana Betio © 2018</a>. All Rights Reserved. <a target="_blank" href="https://github.com/samuelbetio/dGitFile/releases">Release's File</a>
 	</div>
 	
 </div>
